更换背景图

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 }
 
 body {
-	background-image: url(http://imgbd.mxy493.xyz/bg1.jpg);
-	background-size: 100% 100%;
+	background-image: url(http://imgbd.mxy493.xyz/20200529100827.jpg);
+	background-repeat: repeat;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	color: #555;
