更换背景图

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-image: url(http://imgbd.mxy493.xyz/20200529100827.jpg);
+	background-image: url(http://imgbd.mxy493.xyz/mh/bg.png);
 	background-repeat: repeat;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
